responsive overflow problem solved

--- a/index.css
+++ b/index.css
@@ -28,7 +28,7 @@ body{
    align-items: center;
    width: 300px;
    background-color: white;
-   height: 350px;
+   height: 380px;
    border-radius: 20px;    
    box-shadow: 3px 3px 10px rgb(167, 167, 167);
    transition: 0.5s;
